sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:19: error: not found: value i
  } while ((gap>1)||(i>0))
                     ^