sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var gap:Int=getValueCount()
  do {
    if (gap>1) {
      
      gap = (gap.toDouble / 1.3).toInt
      }
    
    var i:Int=0
    while (i+gap<getValueCount()) {
      if (!isSmaller(i,i+gap)) {
        swap(i+gap,i)
        i+=1
        
      }
      
    }
  } while ((gap>1)||(i>0))
  
}